ingress/traefik/app.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-mock-app
  namespace: default
  labels:
    app: nginx-mock-app
spec:
  type: ClusterIP
  selector:
    app: nginx-mock-app
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  sessionAffinity: None
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
## ReplacePathRegex
metadata:
  name: nginx-mock-app
  namespace: default
  labels:
    app: nginx-mock-app
spec:
  replacePathRegex:
    regex: "^/api/v1/(.*)"
    #replacement: "/v2/$1"
    replacement: "/$1"
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-mock-app
  namespace: default
  labels:
    app: nginx-mock-app
spec:
  entryPoints:
    - web
  routes:
    - middlewares:
        - name: nginx-mock-app
      kind: Rule
      match: "Host(`app.wsl.lan`) && PathPrefix(`/api/v1`)"
      #match: "HostSNI(`172.27.240.169`) && PathPrefix(`/api/v1`)"
      services:
        - name: nginx-mock-app
          port: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-mock-app
  namespace: default
  labels:
    app: nginx-mock-app
spec:
  nodeName: xpc
  containers:
  - image: nginx:latest
    imagePullPolicy: Always
    name: nginx
    ports:
    - containerPort: 80
      protocol: TCP
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-h4lkh
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: kube-api-access-h4lkh
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
